--- a/frontend/PhyLab_admin_page.html
+++ b/frontend/PhyLab_admin_page.html
@@ -48,13 +48,24 @@
       <div class="header-title">
         <h1 class="title">PhyLab Admin</h1>
       </div>
+
       <div class="logout">
-        <button
-          class="logout-button"
-          onclick="window.location.href = 'PhyLab_login.html'"
+        <div
+          class="user-profile"
+          id="adminUserProfile"
+          aria-label="Open profile"
+          title="Profile"
         >
-          Logout
-        </button>
+          <svg
+            class="user-profile-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+          >
+            <path
+              d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
+            />
+          </svg>
+        </div>
       </div>
       <button
         class="sidebar-toggle-large"
@@ -2819,6 +2830,92 @@
         }
       })();
     </script>
+    <!-- Admin profile modal (replaces header logout button) -->
+    <div
+      id="admin-profile-modal"
+      class="profile-modal"
+      aria-hidden="true"
+      style="display: none; z-index: 3000"
+    >
+      <div class="profile-card">
+        <button
+          class="close-profile"
+          aria-label="Close profile"
+          onclick="toggleProfile(false)"
+        >
+          &times;
+        </button>
+        <div class="profile-header">
+          <div class="profile-avatar">
+            <svg
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+            >
+              <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+              <circle cx="12" cy="7" r="4"></circle>
+            </svg>
+          </div>
+          <h2 id="admin-display-fullname">PhyLab Administrator</h2>
+          <p id="admin-display-role">Administrator</p>
+        </div>
+        <div class="profile-info">
+          <div class="info-item">
+            <strong>ID Number:</strong>
+            <span id="admin-display-id">ADMIN001</span>
+          </div>
+          <div class="info-item">
+            <strong>Email:</strong>
+            <span id="admin-display-email">phylabsofficial@gmail.com</span>
+          </div>
+        </div>
+
+        <div style="display: flex; gap: 10px; margin-top: 12px">
+          <button class="logout-btn" style="flex: 1" onclick="handleLogout()">
+            Logout
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <script>
+      // Expose toggleProfile globally and attach header click handler
+      window.toggleProfile = function (show) {
+        const modal = document.getElementById("admin-profile-modal");
+        if (!modal) return;
+        if (show === undefined) modal.classList.toggle("show");
+        else if (show) modal.classList.add("show");
+        else modal.classList.remove("show");
+        modal.setAttribute(
+          "aria-hidden",
+          modal.classList.contains("show") ? "false" : "true",
+        );
+        modal.style.display = modal.classList.contains("show")
+          ? "flex"
+          : "none";
+      };
+
+      window.handleLogout = function () {
+        window.location.href = "PhyLab_login.html";
+      };
+
+      (function () {
+        const modal = document.getElementById("admin-profile-modal");
+        if (modal) {
+          modal.addEventListener("click", function (e) {
+            if (e.target === modal) window.toggleProfile(false);
+          });
+        }
+
+        const btn = document.getElementById("adminUserProfile");
+        if (btn)
+          btn.addEventListener("click", function () {
+            window.toggleProfile(true);
+          });
+      })();
+    </script>
+
     <script src="js/admin-borrow-requests.js"></script>
   </body>
 </html>
