added export to excel feature

--- a/frontend/PhyLab_admin_page.html
+++ b/frontend/PhyLab_admin_page.html
@@ -414,6 +414,11 @@
                 Equipment
               </button>
             </div>
+            <div class="equipment-actions">
+              <button id="exportExcelBtn" class="primary-btn">
+                Export to Excel
+              </button>
+            </div>
           </div>
           <div class="inventory-grid">
             <!-- Inventory cards are rendered dynamically by `renderInventoryGrid()` -->
