--- a/frontend/PhyLab_admin_page.html
+++ b/frontend/PhyLab_admin_page.html
@@ -2869,7 +2869,7 @@
       };
 
       window.handleLogout = function () {
-        window.location.href = "PhyLab_login.html";
+        window.location.href = "index.html";
       };
 
       (function () {
