--- a/frontend/obsolete_PhyLab_user_page.html
+++ b/frontend/obsolete_PhyLab_user_page.html
@@ -56,7 +56,7 @@
           </div>
           <button
             class="logout-button"
-            onclick="window.location.href = 'PhyLab_login.html'"
+            onclick="window.location.href = 'index.html'"
           >
             Logout
           </button>
@@ -1423,7 +1423,7 @@
 
       function handleLogout() {
         sessionStorage.removeItem("current_user");
-        window.location.href = "PhyLab_login.html";
+        window.location.href = "index.html";
       }
 
       window.onclick = function (event) {
