--- a/frontend/PhyLab_user_page.html
+++ b/frontend/PhyLab_user_page.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="PhyLab_user_page_style.css" />
 
     <!-- External Scripts (non-module) -->
+    <script src="js/config.js"></script>
     <script src="supabase_fetch.js"></script>
     <script src="inventory_data.js"></script>
   </head>
