--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1147,9 +1147,7 @@
     <div id="adminModal" class="phylab-modal" role="dialog" aria-live="polite">
       <div class="admin-modal-content phylab-modal-content">
         <h3 class="admin-modal-title">Staff Access</h3>
-        <p class="admin-modal-desc">
-          Enter the staff access key (for instructors/staff) to continue.
-        </p>
+        <p class="admin-modal-desc">Enter the Admin access key to continue.</p>
         <input
           id="adminKeyInput"
           type="password"
