--- a/frontend/PhyLab_admin_page.html
+++ b/frontend/PhyLab_admin_page.html
@@ -374,7 +374,7 @@
 
         <section class="page-section" data-page="equipment">
           <div class="page-header">
-            <h2 class="page-title">Invontery Management</h2>
+            <h2 class="page-title">Inventory Management</h2>
             <p class="page-subtitle">Manage inventory stock levels</p>
           </div>
           <div class="equipment-toolbar">
