--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1146,7 +1146,7 @@
     <!-- Admin Access Modal -->
     <div id="adminModal" class="phylab-modal" role="dialog" aria-live="polite">
       <div class="admin-modal-content phylab-modal-content">
-        <h3 class="admin-modal-title">Staff Access</h3>
+        <h3 class="admin-modal-title">Admin Access</h3>
         <p class="admin-modal-desc">Enter the Admin access key to continue.</p>
         <input
           id="adminKeyInput"
