--- a/frontend/PhyLab_admin_page.html
+++ b/frontend/PhyLab_admin_page.html
@@ -1276,7 +1276,7 @@
               <button class="edit-details-btn" onclick="openItemEditModal('${escapeJs(itemKey)}','${escapeJs(item.id || "")}')">Edit Details</button>
               <div class="stock-control">
                 <label>Stock</label>
-                <input type="number" class="stock-input" data-item="${escapeHtml(itemKey)}" value="${escapeHtml(stock)}" placeholder="No." oninput="saveStock(this)">
+                <input type="number" class="stock-input" data-item="${escapeHtml(itemKey)}" value="${escapeHtml(stock)}" placeholder="No." onchange="saveStock(this)">
               </div>
             </div>
           </div>`;
@@ -1389,58 +1389,27 @@
 
         // Try to persist change to backend using card data-id (use set_stock action), fall back to set_stock_by_key
         let backendSucceeded = false;
-        try {
-          const card = inputElement.closest(".inventory-card");
-          const itemId = card ? card.getAttribute("data-id") : null;
+        const card = inputElement.closest(".inventory-card");
+        const itemId = card ? card.getAttribute("data-id") : null;
 
+        if (typeof backendFetch === "function") {
+          let result;
           if (itemId) {
-            const urls = [
-              "/api/inventory/" + itemId + "/set_stock/",
-              (window.PHYLAB_API_BASE || "http://127.0.0.1:8000") +
-                "/api/inventory/" +
-                itemId +
-                "/set_stock/",
-            ];
-            for (let u of urls) {
-              try {
-                const resp = await fetch(u, {
-                  method: "POST",
-                  headers: { "Content-Type": "application/json" },
-                  body: JSON.stringify({ stock: value }),
-                });
-                if (resp && resp.ok) {
-                  backendSucceeded = true;
-                  break;
-                }
-              } catch (e) {
-                // try next url
-              }
-            }
+            result = await backendFetch(`/api/inventory/${itemId}/set_stock/`, {
+              method: "POST",
+              body: { stock: value },
+            });
           } else {
-            // fallback: call set_stock_by_key endpoint using itemKey
-            const urls = [
-              "/api/inventory/set_stock_by_key/",
-              (window.PHYLAB_API_BASE || "http://127.0.0.1:8000") +
-                "/api/inventory/set_stock_by_key/",
-            ];
-            for (let u of urls) {
-              try {
-                const resp = await fetch(u, {
-                  method: "POST",
-                  headers: { "Content-Type": "application/json" },
-                  body: JSON.stringify({ item_key: itemName, stock: value }),
-                });
-                if (resp && resp.ok) {
-                  backendSucceeded = true;
-                  break;
-                }
-              } catch (e) {
-                // try next
-              }
-            }
+            result = await backendFetch("/api/inventory/set_stock_by_key/", {
+              method: "POST",
+              body: { item_key: itemName, stock: value },
+            });
           }
-        } catch (e) {
-          // ignore
+          backendSucceeded = result.ok;
+        } else {
+          console.error(
+            "backendFetch not available – config.js or admin-utils.js may not be loaded yet",
+          );
         }
 
         // Persist locally regardless so UI stays in sync (server is authoritative when available)
@@ -1546,6 +1515,12 @@
           card.appendChild(footer);
         }
 
+        // Preserve edit button before wiping footer contents
+        const editBtn = footer.querySelector(
+          ".edit-item-btn, .edit-details-btn",
+        );
+        if (editBtn) editBtn.remove();
+
         footer.innerHTML = `
         <div class="stock-header">
           <div class="stock-current-btm">Current: <strong>${current}</strong></div>
@@ -1554,6 +1529,9 @@
             <span class="edit-icon" aria-hidden="true"><svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 20h9"></path><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4 12.5-12.5z"></path></svg></span>
           </div>
         </div>`;
+
+        // Re-insert the preserved edit button at the top of the footer
+        if (editBtn) footer.insertBefore(editBtn, footer.firstChild);
 
         // Item details (type/use/description) and cabinet info
         const datasetType =
@@ -1639,12 +1617,21 @@
         const originalKey = "stock_original_" + itemName;
         const origValue = localStorage.getItem(originalKey) || stockInput.value;
 
+        // Preserve edit button before wiping container
+        const editBtn = container.querySelector(
+          ".edit-item-btn, .edit-details-btn",
+        );
+        if (editBtn) editBtn.remove();
+
         container.innerHTML = `
         <input type="number" class="original-edit-input" value="${origValue}" min="0">
         <div class="original-edit-actions">
           <button class="primary-btn original-save">Save</button>
           <button class="secondary-btn original-cancel">Cancel</button>
         </div>`;
+
+        // Re-insert the preserved edit button
+        if (editBtn) container.insertBefore(editBtn, container.firstChild);
 
         const inputEl = container.querySelector(".original-edit-input");
         container.querySelector(".original-save").onclick = function () {
@@ -1658,54 +1645,29 @@
           // Try to persist to backend using set_stock action
           (async function () {
             let backendSucceeded = false;
-            try {
-              const card = stockInput.closest(".inventory-card");
-              const itemId = card ? card.getAttribute("data-id") : null;
+            const card = stockInput.closest(".inventory-card");
+            const itemId = card ? card.getAttribute("data-id") : null;
+
+            if (typeof backendFetch === "function") {
+              let result;
               if (itemId) {
-                const urls = [
-                  "/api/inventory/" + itemId + "/set_stock/",
-                  (window.PHYLAB_API_BASE || "http://127.0.0.1:8000") +
-                    "/api/inventory/" +
-                    itemId +
-                    "/set_stock/",
-                ];
-                for (let u of urls) {
-                  try {
-                    const resp = await fetch(u, {
-                      method: "POST",
-                      headers: { "Content-Type": "application/json" },
-                      body: JSON.stringify({ stock: parseInt(newVal) }),
-                    });
-                    if (resp && resp.ok) {
-                      backendSucceeded = true;
-                      break;
-                    }
-                  } catch (e) {}
-                }
+                result = await backendFetch(
+                  `/api/inventory/${itemId}/set_stock/`,
+                  { method: "POST", body: { stock: parseInt(newVal) } },
+                );
               } else {
-                const urls = [
+                result = await backendFetch(
                   "/api/inventory/set_stock_by_key/",
-                  (window.PHYLAB_API_BASE || "http://127.0.0.1:8000") +
-                    "/api/inventory/set_stock_by_key/",
-                ];
-                for (let u of urls) {
-                  try {
-                    const resp = await fetch(u, {
-                      method: "POST",
-                      headers: { "Content-Type": "application/json" },
-                      body: JSON.stringify({
-                        item_key: itemName,
-                        stock: parseInt(newVal),
-                      }),
-                    });
-                    if (resp && resp.ok) {
-                      backendSucceeded = true;
-                      break;
-                    }
-                  } catch (e) {}
-                }
+                  {
+                    method: "POST",
+                    body: { item_key: itemName, stock: parseInt(newVal) },
+                  },
+                );
               }
-            } catch (e) {}
+              backendSucceeded = result.ok;
+            } else {
+              console.error("backendFetch not available");
+            }
 
             // Persist locally regardless so UI stays in sync
             localStorage.setItem(originalKey, newVal);
@@ -1713,7 +1675,7 @@
               showNotification("Original stock updated on server", "approved");
             } else {
               showNotification(
-                "Original stock updated locally (offline fallback)",
+                "Failed to update original stock on server. Saved locally only.",
                 "warning",
               );
             }
@@ -2459,10 +2421,26 @@
         statusEl.innerText = currentStatus.toUpperCase();
         statusEl.className = `status-tag status-${currentStatus}`;
 
-        // Show admin remark if exists
+        // Show admin remark if exists — check multiple sources
         const remarks =
           JSON.parse(localStorage.getItem("phyLab_Remarks")) || {};
-        const remark = remarks[requestId] || request.adminRemark;
+        // Check per-item backend data, then localStorage keys, then request-level
+        let remark = null;
+        if (item.admin_remark) {
+          remark = {
+            type: item.remark_type || "",
+            text: item.admin_remark,
+            createdAt: item.remark_created_at || null,
+          };
+        } else if (item.id && remarks[`item_${item.id}`]) {
+          remark = remarks[`item_${item.id}`];
+        } else if (remarks[`req_${requestId}`]) {
+          remark = remarks[`req_${requestId}`];
+        } else if (remarks[requestId]) {
+          remark = remarks[requestId];
+        } else if (request.adminRemark) {
+          remark = request.adminRemark;
+        }
         const remarkSection = document.getElementById("det-remark-section");
 
         if (remark && (remark.type || remark.text)) {
